--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,8 @@
 [build]
   command = "npm install --force && npm run build"
   publish = "dist"
+   # Optionally specify the cache directories
+  cache = ["node_modules"]
 
 [context.production.environment]
   VITE_CLERK_PUBLISHABLE_KEY = "pk_test_ZmluZS1nb2F0LTQxLmNsZXJrLmFjY291bnRzLmRldiQ"
