--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
-  command = "npm install --force && npm run build"
+  command = "npm install --legacy-peer-deps && npm run build"
   publish = "dist"
-   # Optionally specify the cache directories
+  # Optionally specify the cache directories
   cache = ["node_modules"]
 
 [context.production.environment]
