--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  command = "npm install --force && npm run build"
-  publish = "build"
+  command = "rm -rf node_modules && npm cache clean --force && npm install --legacy-peer-deps && npm run build"
+  publish = "dist"
 
 [context.production.environment]
   VITE_CLERK_PUBLISHABLE_KEY = "pk_test_ZmluZS1nb2F0LTQxLmNsZXJrLmFjY291bnRzLmRldiQ"
